cabal-version:      3.0
name:               dt
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Joonas Laukka
maintainer:         joonas.laukka@relexsolutions.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable dt-test
  main-is: dt-test.hs 
  hs-source-dirs:
    executables
  build-depends:      base ^>=4.15.1.0
                    , text
                    , servant 
                    , servant-server
                    , servant-auth-server
                    , jose
                    , wai
                    , warp
                    , dt
  default-language: Haskell2010

    

library
    import:           warnings
    exposed-modules:  App 
                    , API 
                    , User
                    , GHC.TypeLits.SymbolList
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , text
                    , typelits-witnesses <= 0.3.3
                    , servant 
                    , servant-server
                    , servant-auth-server
                    , jose
                    , containers
                    , aeson
                    , lens
                    , mtl
                    , wai
                    , warp
    hs-source-dirs:   src
    default-language: Haskell2010
